--- a/main.css
+++ b/main.css
@@ -12,7 +12,7 @@ body{
 .navbar {
     background: linear-gradient(45deg,
     #878787 ,
-    #ff9a00 ,
+    
     
    );
     line-height: 3rem;
@@ -57,8 +57,8 @@ main{
     align-items: ;
     background: linear-gradient(45deg,
    
-#4fdc4f ,
-#3fdad8 );
+#4fdc4f 
+ );
 
 } 
 main .featured-projects{
@@ -76,8 +76,7 @@ main .featured-projects img{
 footer{
     background: linear-gradient(45deg,
     #3fdad8 ,
-    #2fc9e2 ,
-    #1c7fee );
+    );
 }
 footer ul
 {
@@ -96,19 +95,4 @@ footer p{
     color: #fff;
     text-align: center;
 }
-a{
-    content: "";
 
-background: linear-gradient(45deg,
-#ff0000
-#ff9a00 
-#d0de21 
-#4fdc4f 
-#3fdad8 
-#2fc9e2 
-#1c7fee 
-#5f15f2 
-#ba0cf8 
-#fb07d9 
-#ff0000 
-) repeat 0% 0% / 300% 100%;
